Document unenforced operation
Maybe also phrase the Backend.c JEP 411 warning a little bit
less apocalyptically.

Having suggested --limit-modules=org.postgresql.pljava.internal
and claimed that it doesn't break the tests, add it to the CI script
to make sure it stays that way.